# Protocolo-Entrega

./: Aplicacao.py  Arq.py  Enquadramento.py  Quadro.py  README.md  Sessao.py  Subcamada.py  enq_poller_ref.py  mensagem.py  serialemu  teste.py
serial_com/: CMakeLists.txt  main.cpp
